force-app/main/default/objects/Customer_Asset_Shipping_Forecast__c/Customer_Asset_Shipping_Forecast__c.object-meta.xml
<CustomObject>
    <label>Customer Asset Shipping Forecast</label>
    <nameField>
        <label>Customer Asset Shipping Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Asset Shipping Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>