force-app/main/default/objects/Customer_Asset_Shipping_Forecast__c/fields/Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset__c</fullName>
    <label>Customer Asset</label>
    <referenceTo>Customer_Asset__c</referenceTo>
    <relationshipLabel>Customer Asset Shipping Forecasts</relationshipLabel>
    <relationshipName>Customer_Asset_Shipping_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>