force-app/main/default/objects/Customer_Asset_Shipping_Forecast__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Customer Asset Shipping Forecasts</relationshipLabel>
    <relationshipName>Customer_Asset_Shipping_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>