force-app/main/default/objects/Customer_Asset_Shipping_Forecast__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Group</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Customer Asset Shipping Forecasts</relationshipLabel>
    <relationshipName>Customer_Asset_Shipping_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>